--- a/assets/css/pedidos.css
+++ b/assets/css/pedidos.css
@@ -198,7 +198,7 @@
 
 }
 
-@media screen and (max-width: 569px) {
+@media screen and (max-width: 425px) {
     .table th,
     .table td {
         padding: 10px;
@@ -213,7 +213,7 @@
         display: flex;
         gap: var(--spacing-sm);
         justify-content: flex-end;
-        margin-left: 5px;
+        margin-left: 20%;
         width: 80px;
         font-size: 20px;
     }
@@ -244,6 +244,14 @@
     .table th {
         padding: 25px;
         font-size: 15px;
+    }
+    .table .actions {
+        display: flex;
+        gap: var(--spacing-sm);
+        justify-content: flex-end;
+        margin-left: 33px;
+        width: 80px;
+        font-size: 20px;
     }
 
 }
