--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,8 @@
 /* VARIABLES Y ROOT */
 :root {
   /* Colores principales */
-  --primary: #4a6da7;
-  --primary-dark: #345291;
+  --primary: #345291;
+  --primary-dark: #2a406e;
   --secondary: #a74a4a;
   --secondary-dark: #913434;
   
