--- a/assets/css/colegios.css
+++ b/assets/css/colegios.css
@@ -69,6 +69,14 @@
         width: 100%;
         max-width: 100%;
     }
+    /* Ajustes de la tabla para móvil */
+    .table-container {
+        overflow-x: auto;
+        width: 100%;
+        margin-left: 0;
+        padding-left: 0;
+        padding-right: 0;
+    }
 
     .table .actions {
         display: flex;
@@ -93,10 +101,7 @@
         font-size: 14px;
     }
 
-    .table-responsive {
-        overflow-x: auto;
-        -webkit-overflow-scrolling: touch;
-    }
+    
     .table {
         min-width: 600px;
     }
@@ -118,7 +123,14 @@
         width: 100%;
         max-width: 100%;
     }
-
+    /* Ajustes de la tabla para móvil */
+    .table-container {
+        overflow-x: auto;
+        width: 100%;
+        margin-left: 0;
+        padding-left: 0;
+        padding-right: 0;
+    }
     .btn-secondary {
         background: #4267B2;
         color: white;
