--- a/assets/css/produccion.css
+++ b/assets/css/produccion.css
@@ -18,6 +18,11 @@
     width: 100%;
     box-sizing: border-box;
   }
+  .actions{
+    position: relative; /* o absolute */
+    left: 50px;
+    
+}
   /* --- FIN: Ajustes para tabla y botones --- */
   @media (max-width: 768px) {
     .sidebar {
