--- a/assets/css/colegios.css
+++ b/assets/css/colegios.css
@@ -29,23 +29,29 @@
 }
 
 /* Encabezados de tabla */
-.table th {
-    padding: 0.8rem;
-    text-align: left;
-    color: #333;
-    white-space: nowrap; /* Evita que el texto se divida en varias líneas */
+.table {
+    width: 100%;
+    border-collapse: collapse;
 }
 
-/* Contenedor de botones de acción */
-.table .actions {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.2rem;
-    justify-content: center;
-    margin: 0;
-    width: auto;
+.table tr {
+    display: table-row;
 }
+
+.table th {
+    padding: 2px;
+    height: 50px;
+    color: #333;
+    text-align: center;
+}
+
+.actions{
+    position: relative; /* o absolute */
+    left: 30px;
+    
+}
+/* Contenedor de botones de acción */
+
 
 /* Estilos para la paginación */
 .pagination {
@@ -62,38 +68,29 @@
 }
 
 /* RESPONSIVE: Hasta 992px */
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1150px) {
+    
+    
     .container {
         display: flex;
         flex-direction: column;
         width: 100%;
         max-width: 100%;
     }
-    /* Ajustes de la tabla para móvil */
-    .table-container {
-        overflow-x: auto;
-        width: 100%;
-        margin-left: 0;
-        padding-left: 0;
-        padding-right: 0;
-    }
 
-    .table .actions {
-        display: flex;
-        gap: var(--spacing-sm);
-        justify-content: flex-end;
-        width: 100px;
-        margin-left: 26px;
+    .actions {
+        position: relative; /* o absolute */
+        left: 40px;
     }
 
     .table th {
-        padding: 25px;
+        padding: 10px;
         text-align: center;
         vertical-align: middle;
     }
 
     .table td {
-        padding: 0.8rem;
+        padding: 0.9rem;
         white-space: nowrap;
         width: 20px;
         text-align: center;
@@ -101,9 +98,12 @@
         font-size: 14px;
     }
 
-    
+    .table-responsive {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+    }
     .table {
-        min-width: 600px;
+        min-width: 800px;
     }
 
     .table th:nth-child(5) {
@@ -112,6 +112,25 @@
         max-width: 140px;
         white-space: nowrap;
         word-break: normal;
+    }
+    .table th:nth-child(6) {
+        font-size: 0.95em;
+        min-width: 190px;
+        max-width: 900px;
+        white-space: nowrap;
+        word-break: normal;
+    }
+}
+@media screen and (max-width: 980px) {
+    
+    
+    .table .actions {
+        display: flex;
+        gap: var(--spacing-sm);
+        justify-content: center;
+        width: auto;
+        margin-left: 0;
+        top: -2px;
     }
 }
 
@@ -123,14 +142,7 @@
         width: 100%;
         max-width: 100%;
     }
-    /* Ajustes de la tabla para móvil */
-    .table-container {
-        overflow-x: auto;
-        width: 100%;
-        margin-left: 0;
-        padding-left: 0;
-        padding-right: 0;
-    }
+
     .btn-secondary {
         background: #4267B2;
         color: white;
@@ -185,6 +197,7 @@
         justify-content: center;
         width: auto;
         margin-left: 0;
+        top: -2px;
     }
 
     /* Estilos para botones pequeños */
@@ -306,7 +319,8 @@
         gap: var(--spacing-sm);
         justify-content: center;
         width: auto;
-        margin-left: 0;
+        top: -2px;
+        margin-left: 90px;
     }
 
     .btn-sm-btn-primary {
@@ -358,7 +372,7 @@
 }
 
 /* RESPONSIVE: Hasta 374px */
-@media screen and (max-width: 374px) {
+@media screen and (max-width: 300px) {
     .container {
         display: flex;
         flex-direction: column;
