--- a/assets/css/colegios.css
+++ b/assets/css/colegios.css
@@ -145,6 +145,7 @@
 
     .btn-secondary {
         background: #4267B2;
+        background: #959699;
         color: white;
         border: none;
         margin-left: 200px;
