--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,7 @@
   /* Grises */
   --dark: #333333;
   --medium: #666666;
+  --wild-Blue: #38445e;
   --light: #f5f5f5;
   --white: #ffffff;
   
@@ -194,6 +195,29 @@ button, input, select, textarea {
 .btn-sm {
   padding: var(--spacing-xs) var(--spacing-sm);
   font-size: var(--font-size-small);
+}
+.btn-anterior {
+  background: var(--wild-Blue) ;
+  color: var(--white);
+  width: 86px;
+  height: 25px;
+  font-size: 13px;
+  align-items: center;
+  display: flex;
+  justify-content: flex-start;
+}
+.btn-siguiente {
+  background: var(--wild-Blue);
+  color: var(--white);
+  width: 86px;
+  height: 25px;
+  font-size: 13px;
+  align-items: center;
+  display: flex;
+  justify-content: flex-start;
+}
+.pagination span {
+  font-size: 14px;
 }
 
 .btn-lg {
