--- a/assets/css/inventario.css
+++ b/assets/css/inventario.css
@@ -109,7 +109,7 @@ html, body {
     gap: var(--spacing-sm);
     justify-content: flex-end;
     width: 8px;
-    left: 2%;
+    margin-left: 20%;
 }
 
 .menu-button {
@@ -158,12 +158,7 @@ html, body {
 }
 
  /* Estilos adicionales específicos de inventario */
- .pagination {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 10px;
-}
+
 
 .card-footer {
     padding: var(--spacing-md);
@@ -281,6 +276,20 @@ html, body {
     .header-buttons button {
         margin: 0;
     }
+    .btn-siguiente{
+        width: 100px;
+    }
+    .btn-anterior{
+        width: 100px;
+    }
+    .pagination {
+        display: flex;
+        margin-right:150px; 
+        align-items: center;
+        display: flex;
+        justify-content: flex-start;
+        gap: 2px;
+    }
 }
 
 @media screen and (min-width: 769px) {
@@ -337,8 +346,20 @@ html, body {
         padding-left: 0;
         padding-right: 0;
     }
+   
 }
-@media (min-width: 400px) {
+@media (max-width: 600px) {
+    .pagination {
+        display: flex;
+        margin-right:30px; 
+        align-items: center;
+        display: flex;
+        justify-content: flex-start;
+        gap: 2px;
+    }
+
+}
+@media (min-width: 480px) {
     
     .btn-ver{
         
@@ -350,13 +371,11 @@ html, body {
     }
     .pagination {
         display: flex;
-        justify-content: flex-end;
+        margin-left:5px; 
         align-items: center;
-        gap: 1rem;
-        padding: 0.8rem;
-        background: white;
-        font-size: 15px;
-        white-space: nowrap;
+        display: flex;
+        justify-content: flex-start;
+        gap: 2px;
     }
 
     .pagination button {
@@ -397,7 +416,7 @@ html, body {
         background: white;
         font-size: 15px;
         white-space: nowrap;
-        margin-left: 180px;
+        margin-left: 270px;
     }
 
     .pagination button {
@@ -408,6 +427,14 @@ html, body {
         font-size: 15px;
         letter-spacing: 1px;
     }
+    .btn-siguiente{
+        width: 100px;
+    }
+    .btn-anterior{
+        width: 100px;
+    }
+   
+    
     
 
 }
